# magic-wormhole.rs

./: Cargo.toml  Wormhole.java
core/: Cargo.toml
core-c/: Cargo.toml  README
core-c/src/: lib.rs
core/src/: key.rs  lib.rs  receive.rs  server_messages.rs  transfer.rs
io/blocking/: Cargo.toml
io/blocking/examples/: receive.rs  send-file.rs  send-text.rs  send.rs
io/blocking/src/: blocking.rs  lib.rs
src/: main.rs
