[package]
name = "magic-wormhole-io-blocking"
version = "0.0.1"
authors = ["Brian Warner <warner@lothar.com>"]

[dependencies]
magic-wormhole-core = { path = "../../core" }
ws = "0.7.*"
url = "1.7"
serde_json = "1.0"
hex = "0.3"
jni = "0.10.2"
log = "0.4.0"
sodiumoxide = "0.0.16"

[target.'cfg(target_os = "android")'.lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.7"

